'完成了登录部分的js文件'

--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -24,3 +24,7 @@ html, body {
     height: 60px;
     background: url('/assets/images/login_title.png') no-repeat center;
 }
+
+.reg-box {
+    display: none;
+}
