--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,4 +1,5 @@
-html, body {
+html,
+body {
     padding: 0;
     margin: 0;
     width: 100%;
@@ -27,4 +28,31 @@ html, body {
 
 .reg-box {
     display: none;
+}
+
+.layui-form {
+    padding: 10px 30px 0 30px;
+}
+
+.links {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.links a {
+    font-size: 12px;
+}
+
+.layui-form-item {
+    position: relative;
+}
+
+.layui-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.layui-input {
+    padding: 0 32px;
 }
